@@ -5,6 +5,7 @@
  * Known bugs:
  * - Refresh button off the panel on elementary OS with elementary OS theme (aka. Fixed refreshbutton placement for some themes)
  * - Users of removed favorite-providers don't get deleted
+ * - Outputs some debug info to the dev console
  *
  * Planned features:
  * - show duration a stream is online in panel (?)
@@ -123,8 +124,8 @@ exports.setChannels = function(source,channelNames,rich) {
                 this.onChannelRemove(channel);
                 delete data.channels[channel];
             }
-            else if(data.channels[channel].sources[source.name+'Set']&&source.type!='username')
-                data.channels[channel].sources[source.name+'Set'] = false;
+            else if(data.channels[channel].sources[source.type+'Set']&&source.type!='username')
+                data.channels[channel].sources[source.type+'Set'] = false;
             else if(source.type=='username') {
                 for(var username in data.channels[channel].sources.usernames) {
                     if(!this.exactArraySearch(data.users,data.channels[channel].sources.usernames[username],false))
@@ -154,7 +155,7 @@ exports.addChannel = function(channel,source) {
 		if(source.type=='username')
 			prototype.sources.usernames.push(channel.login);
 		else
-			prototype.sources[source.name+'Set'] = true;
+			prototype.sources[source.type+'Set'] = true;
 		prototype.names.push(channel.title);
 		prototype.names.push(channel.login);
 		prototype.image.push(channel.image_url_tiny);
@@ -165,7 +166,7 @@ exports.addChannel = function(channel,source) {
 	else if(source.type=='username')
 		data.channels[channel.login].sources.usernames.push(source.name);
 	else
-		data.channels[channel.login].sources[source.name+'Set'] = true;
+		data.channels[channel.login].sources[source.type+'Set'] = true;
 };
 
 exports.onChannelRemove = function(channel) {
